# Reddit-Data-Pipeline-Engineering

./: .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.tx  requirements.txt  requirements2.tx
.trunk/: trunk.yaml
dags/: reddit_dag.py
